--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18.1.0",
     "react-day-picker": "^8.0.5",
     "react-dom": "^18.1.0",
+    "react-hot-toast": "^2.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.6.4",
