Todo登録機能（完了、削除）、文字列取得のカスタムHook作成完了

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,7 +21,8 @@
   },
   "plugins": ["react", "@typescript-eslint"],
   "rules": {
-    "react/react-in-jsx-scope": "off"
+    "react/react-in-jsx-scope": "off",
     //これがないと、 error 'React' must be in scope when using JSXと怒られる。
+    "react/prop-types": "off"
   }
 }
